demo/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - envFrom:
          - configMapRef:
              name: frontend-env
      - env:
        - name: APP_SECRET
          value: unsafe-secret
        - name: CROSSREF_API_BEARER_TOKEN
          value: bogus
        - name: SCIETY_TEAM_API_BEARER_TOKEN
          value: not-really-secret-bearer-token
        - name: PGDATABASE
          valueFrom:
            secretKeyRef:
              key: postgresql-database
              name: foo
        - name: PGUSER
          valueFrom:
            secretKeyRef:
              key: postgresql-username
              name: foo
        - name: PGPASSWORD
          valueFrom:
            secretKeyRef:
              key: postgresql-password
              name: foo
        - name: PGHOST
          valueFrom:
            secretKeyRef:
              key: postgresql-host
              name: foo
        - name: PGPORT
          valueFrom:
            secretKeyRef:
              key: postgresql-port
              name: foo
        - name: AUTH0_CLIENT_ID
          value: bogus-auth0-client-id
        - name: AUTH0_CLIENT_SECRET
          value: bogus-auth0-client-secret
        - name: AUTH0_DOMAIN
          value: sciety-staging.eu.auth0.com
        - name: AUTH0_CALLBACK_URL
          value: https://staging.sciety.org/auth0/callback
        image: sciety/sciety:c9ce6d413f5ee857b9b55b526e0e5846b66eaac0
        name: app
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 1
        volumeMounts:
        - mountPath: /var/run/secrets/app
          name: gcp-ncrc-key
          readOnly: true
      volumes:
      - name: gcp-ncrc-key
        secret:
          secretName: ncrc-sheet-key
